<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btList" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btRegister" />

    <Button
        android:id="@+id/btPending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btPending" />

    <Button
        android:id="@+id/btSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSettings" />
</LinearLayout>
